# LumoUA

./: .gitignore  Edina Desktop.dc.html  LUMO.md  README.md  fixpw.js  fixpw.py
backend/: .env.example  ADMIN.md  AI.md  API_PLATFORM.md  COINS.md  DEVELOPER.md  GIFTS.md  GROWTH.md  LAUNCH_READINESS.md  PAYMENTS.md  PREMIUM.md  PROFILE.md  README.md  SECURITY.md  USER_GUIDE.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
design/: animations-choreography.md  edina-ui-kit.html  kolo-design-batch1.html
design_handoff_edina_desktop/: README.md
desktop/: WEB_DESKTOP.md  generate-icons.js  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: 01-vision.md  02-product-requirements.md  03-roadmap.md  04-functional-requirements.md  05-non-functional-requirements.md  06-ux-research.md  07-user-personas.md  08-user-flows.md  09-information-architecture.md  10-design-system.md  11-ui-kit.md  12-color-palette.md  13-typography.md  14-iconography.md  15-components.md  16-animations.md  17-mobile-architecture.md  18-backend-architecture.md  19-web-architecture.md  20-database-schema.md  21-er-diagrams.md  22-api-specification.md  23-authentication.md  24-authorization.md  25-notification-system.md  26-chat-architecture.md  27-feed-architecture.md  28-recommendation-engine.md  29-search-architecture.md  30-storage-architecture.md  31-security.md  32-moderation.md  33-ai-moderation.md  34-deployment.md  35-devops.md  36-ci-cd.md  37-monitoring.md  38-testing.md  (+12 more)
(+475 files in other folders)
