[package]
name = "lumo-desktop"
version = "0.1.0"
description = "Lumo — native desktop shell (Tauri)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["notification-all", "global-shortcut-all", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "window-create", "window-close"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
